# test-bostongene

./: .gitignore  Dockerfile  README.md  celery_app.py  docker-compose.yml  pyproject.toml  requirements.txt  rest.py
cfg/: rest.docker.py  rest.py
core/: base.py  exceptions.py  files.py  helpers.py
handlers/: __init__.py  files.py
init/: create_databases.sql
models/: database.py  files.py
schemas/: base.py  files.py
