[tool.poetry]
name = "mighty-hasher-2000"
version = "0.1.0"
description = "I take files, you take hashes"
authors = ["Vladislav Boyko <v1aght@ya.ru>"]
license = "Buy me a beer and do whatever you want with the project"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.2"
SQLAlchemy = "^1.4.35"
celery = "^5.2.6"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
aiofiles = "^0.8.0"
databases = "^0.5.5"
asyncpg = "^0.25.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.18.1"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
